Spacing Issues

--- a/styles/index.css
+++ b/styles/index.css
@@ -19,6 +19,11 @@
     width: 34px;
     height: 30px;
 }
+.main{
+    padding-top: 7vh;
+    padding-left: 10vw;
+    padding-right: 0;
+}
 
 
 a{
